@@ -15,6 +15,11 @@ get_supported_langs_cxx(DRAWPILE_LOCALES)
 include(DrawpileFileExtensions)
 get_qt_extensions(RECORDING DRAWPILE_FILE_GROUP_RECORDING)
 get_qt_extensions(IMAGE DRAWPILE_FILE_GROUP_IMAGE)
+if(SOURCE_ASSETS)
+	set(DRAWPILE_SOURCE_ASSETS_DESKTOP "${PROJECT_SOURCE_DIR}/src/desktop/assets")
+else()
+	unset(DRAWPILE_SOURCE_ASSETS_DESKTOP)
+endif()
 configure_file(config.h.in cmake-config/cmake-config/config.h)
 
 include(GitVersion)
